# Stride

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  DEVELOPMENT.md  FEATURES.md  LICENSE  PYPI_PUBLISHING_GUIDE.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  TESTS.md  V1.0_RELEASE_SUMMARY.md  debug_force.py  debug_init.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  version_sync.py
.github/workflows/: build-executables.yml  docs.yml
.stride/: project.md
.stride/sprints/sprint-docs-team/: design.md  implementation.md  plan.md  proposal.md
.stride/sprints/sprint-team-collab/: design.md  implementation.md  plan.md  proposal.md
.stride/templates/: comments.yaml.example  design.md  metadata.yaml.example  plan.md  proposal.md  team.yaml.example
agent-commands/: index.html
cli-commands/: index.html
code-of-conduct/: index.html
docs/: README.md  agent-commands.md  cli-commands.md  code-of-conduct.md  features.md  index.md  license.md  philosophy.md  sprint-lifecycle.md  team-workflow.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/javascripts/: extra.js
docs/sprints/completed/SPRINT-0001/: retrospective.md
docs/stylesheets/: extra.css
features/: index.html
getting-started/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
javascripts/: extra.js
license/: index.html
philosophy/: index.html
search/: search_index.json
sprint-lifecycle/: index.html
sprints/completed/SPRINT-0001/retrospective/: index.html
stride/: __init__.py  __main__.py  cli.py  config.py  constants.py  models.py  utils.py
stride/agents/: __init__.py  configurator.py  markers.py  registry.py  templates.py
stride/agents/configurators/: __init__.py  amazonq.py  antigravity.py  auggie.py  claude.py  cline.py  codebuddy.py  codex.py  copilot.py  costrict.py  crush.py  cursor.py  factory.py  gemini.py  kilo.py  opencode.py  qoder.py  qwen.py  roocode.py  universal.py  windsurf.py
stride/cli/: __init__.py  main.py
stride/cli/commands/: __init__.py
stride/commands/: __init__.py  approve.py  assign.py  auth.py  comment.py  docs.py  init.py  list.py  metrics.py  show.py  status.py  team.py  validate.py
stride/commands/marker/: __init__.py  validate.py  view.py
stride/config/: defaults.yaml
stride/core/: __init__.py  agent_manager.py  agent_registry.py  analytics.py  analytics_cache.py  approval_manager.py  assignment_manager.py  auth.py  comment_manager.py  config_manager.py  config_schemas.py  documentation_generator.py  file_manager.py  folder_manager.py  health_checker.py  learnings_reader.py  markdown_parser.py  metadata_manager.py  metrics_calculator.py  nice_parser.py  sprint_manager.py  sprint_parser.py  team_file_manager.py  template_converter.py  template_engine.py  user_context.py  validator.py  validators.py  watcher.py  workload_analyzer.py
stride/export/: __init__.py  export_engine.py
stride/export/formatters/: __init__.py  csv_formatter.py  html_formatter.py  json_formatter.py  markdown_formatter.py
stride/templates/: AGENTS.md.j2  __init__.py  design.md.j2  implementation.md.j2  plan.md.j2  project.md.j2  proposal.md.j2  retrospective.md.j2
stride/templates/agent_commands/: annotate.md  complete.md  derive.md  docs.md  feedback.md  implement.md  init.md  lite.md  plan.md  present.md  review.md  status.md  validate.md
stride/templates/agents_docs/: internal.md  marker.md
stride/templates/sprint_files/: implementation.md  learnings.md  plan.md  project.md  retrospective.md  spec.md
stride/utils/: __init__.py  file_utils.py  id_generator.py  validators.py
stylesheets/: extra.css
team-workflow/: index.html
tests/: __init__.py  test_agent_commands.py  test_agent_integration.py  test_agent_manager.py  test_cli.py  test_cli_auth.py  test_cli_config.py  test_cli_init_enhanced.py  test_config_manager.py  test_core.py  test_doctor.py  test_export_command.py  test_integration.py  test_metadata_manager.py  test_sprint_manager.py  test_status_enhanced.py  test_template_engine.py  test_validators.py  test_watch.py
